--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Angular boilerplate</title>
+  <title>Auto-entrepreneur</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
