--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
   <title>Auto-entrepreneur</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#5755d9">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Veuillez activer JavaScript afin de continuer à utiliser cette application.</noscript>
 </body>
 </html>
